# dinojam3

./: .gitignore  Cargo.toml  README.md  darwins_ascent.js  darwins_ascent_bg.wasm  dinojam3.js  dinojam3_bg.wasm  index.html
.github/workflows/: rust.yml
aseprite/: Beachball.aseprite  bomb.aseprite  boost-bar.aseprite  buy-screen-selected-card.aseprite  buy-screen.aseprite  cannon.aseprite  cloud.aseprite  cloud2.aseprite  cloud3.aseprite  cloud4.aseprite  dino1.aseprite  disk-icon.aseprite  disk.aseprite  flag.aseprite  rock.aseprite  speed-bar.aseprite
assets/: background-clouds-itch.aseprite  bomb.toml  cannon.toml  cloud.aseprite  cloud.toml  cloud2.toml  cloud3.toml  cloud4.toml  dino1.aseprite  dino2.aseprite  dino2.toml  dino3.aseprite  dino4.aseprite  dino4.toml  disk.toml  logo-wide.aseprite  logo.aseprite  palm.aseprite  palm.toml  rock.toml  settings.toml  torus-sans.toml
assets/card/: attract.toml  cannon.toml  noop.toml  wings.toml
src/: assets.rs  camera.rs  card.rs  font.rs  game.rs  main.rs  math.rs  object.rs  particle.rs  pickup.rs  random.rs  sprite.rs  window.rs
src/graphics/: mod.rs
