[package]
name = "darwins_ascent"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Versteeg <t@versteeg.email>"]
license = "AGPL-3.0"
homepage = "https://github.com/tversteeg/castle-game"

readme = "README.md"
description = "DINOJAM3 entry"

repository = "https://github.com/tversteeg/dinojam3.git"
keywords = ["game", "2d"]
categories = ["games"]

[features]
default = ["embed-assets"]
embed-assets = []

[dependencies]
winit = "0.28"
log = "0.4"
pixels = "0.13"
blit = "0.8"
game-loop = { version = "1.0", features = ["winit"] }
miette = { version = "5", features = ["fancy"] }
image = { version = "0.24", default-features = false, features = ["png"] }
rotsprite = "0.1"
vek = "0.16"
assets_manager = { version = "0.11", features = ["embedded", "hot-reloading", "toml", "png"], default-features = false }
serde = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["macros", "sync", "rt-multi-thread"] }
fastrand = "2"
puffin = "0.19"
puffin_http = "0.16"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "ImageData", "Window"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_log = { version = "1", features = ["wasm-bindgen", "color"] }
console_error_panic_hook = "0.1"
fastrand = { version = "2", default-features = false, features = ["js"] }
puffin = "0.19"

[workspace]
members = ["run-wasm"]
